# file-storage-zome

./: Makefile  README.md
dna-src/zomes/file-storage/code/: .hcbuild  Cargo.toml
dna-src/zomes/file-storage/code/src/: chunk.rs  manifest.rs
ui/: Cargo.toml  app.js  index.html
ui/js-lib/: file-storage-zome-client.js
ui/lib/: hc-web-client-0.4.0.browser.min.js
ui/src/: app.rs  file_storage_zome_client.rs  lib.rs
