[package]
name = "file-storage-zome-client"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.43", features = ["serde-serialize"]}
stdweb = "0.4.17"
web-sys = {version = "0.3.20", features = ["Blob", "BlobPropertyBag", "Url"]}
js-sys = "0.3.20"
serde = {version = "1.0.90", features = ["derive"]}
base64 = "0.10.1"

[profile.release]
lto = true
opt-level = 's'
