[package]
name = "file-storage-zome-client"
version = "0.1.0"
authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.10.1"
js-sys = "0.3.22"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
stdweb = "0.4.17"
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }

[profile.release]
lto = true
opt-level = 's'
